# forecast-reconciler

./: README.md  pyproject.toml
docs/: architecture.md  data-contracts.md  reconciliation-rules.md
src/forecast_reconciler/: config.py  exceptions.py  types.py
src/forecast_reconciler/app/: __init__.py  planning.py  streamlit_app.py
src/forecast_reconciler/io/: __init__.py  writers.py
src/forecast_reconciler/normalisation/: __init__.py  dates.py  schemas.py  standardise.py
src/forecast_reconciler/reconciliation/: __init__.py  allocator.py  rounding.py  weights.py
src/forecast_reconciler/reporting/: __init__.py  summaries.py
src/forecast_reconciler/validation/: __init__.py  integrity.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_package.py  test_types.py
tests/app/: test_planning.py  test_streamlit_app.py
tests/integration/: test_end_to_end_pipeline.py
tests/io/: test_writers.py
tests/normalisation/: test_dates.py  test_schemas.py  test_standardise.py
tests/reconciliation/: test_rounding.py  test_weights.py
tests/reporting/: test_summaries.py
tests/validation/: test_integrity.py
